load("@rules_python//python:defs.bzl", "py_test")
load("@pip//:requirements.bzl", "requirement")

py_test(
    name = "common_test",
    size = "small",
    srcs = glob(["**/*.py"]) + ["//tools:pytest_main.py"],
    main = "//tools:pytest_main.py",
    args = ["tests/"],
    data = [
        "//:workflow_files",
        "//:pytest_ini",
    ],
    deps = [
        requirement("pytest"),
        requirement("pytest-env"),
        requirement("jsonschema"),
        requirement("jsonschema-specifications"),
        requirement("pyyaml"),
        requirement("referencing"),
    ],
    env = {"DJANGO_SETTINGS_MODULE": "backend.test_settings"},
)

sh_test(
    name = "container_smoke_test",
    srcs = ["test_container_smoke.sh"],
    data = [
        "//api:api_runtime_files",
        "//backend:backend_runtime_files",
    ],
    args = [
        "$(locations //api:api_runtime_files)",
        "$(locations //backend:backend_runtime_files)",
    ],
)
