load("@aspect_rules_py//py:defs.bzl", "py_test")

py_test(
    name = "common_test",
    size = "small",
    srcs = glob(["**/*.py"]) + ["//tools:pytest_main.py"],
    main = "//tools:pytest_main.py",
    args = ["tests/"],
    data = [
        "//:workflow_files",
        "//:pytest_ini",
    ],
    deps = [
        "@pypi//pytest",
        "@pypi//pytest_env",
        "@pypi//jsonschema",
        "@pypi//jsonschema_specifications",
        "@pypi//pyyaml",
        "@pypi//referencing",
    ],
    env = {"DJANGO_SETTINGS_MODULE": "backend.test_settings"},
)

