load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library")
load("//:python.bzl", "pytest_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

# ── Shell script syntax checks ────────────────────────────────────────────────
# Each entry: script_name -> extra data deps beyond the script itself.
# cluster_setup also sources patch_system_probes, so it needs both.
_SHELL_SCRIPTS = {
    "ensure_cluster": [],
    "ensure_k3s_tailscale": [],
    "helm_deploy": [],
    "render_values": [],
}

[sh_test(
    name = "test_{}_syntax".format(name),
    srcs = ["tests/test_{}_syntax.sh".format(name)],
    data = ["{}.sh".format(name)] + extra,
) for name, extra in _SHELL_SCRIPTS.items()]

# ── Pytest runner ─────────────────────────────────────────────────────────────
# Shared entry point for all py_test targets. Each test BUILD file lists this
# as both a srcs entry and the main, then passes the test directory as an arg.

exports_files(["pytest_main.py", "mypy_main.py"])

# Placeholder target for the glaze-tools uv workspace member.
# uv.override_package() in MODULE.bazel points here so Bazel skips
# trying to install it from PyPI.
py_library(
    name = "glaze_tools",
    srcs = [],
)

# ── OpenAPI schema generator ──────────────────────────────────────────────────
# py_binary used as a genrule tool by //web:openapi_schema.
# Runs manage.py spectacular in a minimal Django environment (no real DB).

py_binary(
    name = "generate_schema",
    srcs = ["generate_schema.py"],
    data = ["//:workflow_files"],
    deps = [
        "//api:api_lib",
        "//backend:backend_lib",
        "@pypi//django",
        "@pypi//djangorestframework",
        "@pypi//drf_spectacular",
        "@pypi//pyyaml",
        "@pypi//google_auth",
        "@pypi//requests",
        "@pypi//setuptools",
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "visualize_crops",
    srcs = ["visualize_crops.py"],
    deps = [
        "//api:api_lib",
        "//backend:backend_lib",
        "@pypi//django",
        "@pypi//requests",
        "@pypi//pillow",
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "grafana_dashboard",
    srcs = ["grafana_dashboard.py"],
    deps = ["@pypi//grafana_foundation_sdk"],
    visibility = ["//visibility:public"],
)

pytest_test(
    name = "test_grafana_dashboard",
    srcs = [
        "grafana_dashboard.py",
        "tests/test_grafana_dashboard.py",
        "//tools:pytest_main.py",
    ],
    main = "//tools:pytest_main.py",
    args = ["tools/tests/test_grafana_dashboard.py"],
    deps = ["@pypi//grafana_foundation_sdk"],
    expected_coverage = ["tools/grafana_dashboard.py"],
    visibility = ["//visibility:public"],
)

# ── Glaze dev-stack launcher ────────────────────────────────────────────────
# Single hermetic entry point for `gz_start`. It starts backend + web,
# writes pid/port metadata, and exits so Bazel can release its lock.
py_binary(
    name = "gz_start_launcher",
    srcs = ["gz_start_launcher.py"],
    data = [
        "//:workflow_files",
        "//web:dev_server",
    ],
    deps = [
        "//api:api_lib",
        "//backend:backend_lib",
        "@pypi//uvicorn",
    ],
    visibility = ["//visibility:public"],
)

pytest_test(
    name = "test_gz_start_launcher",
    srcs = [
        "gz_start_launcher.py",
        "tests/test_gz_start_launcher.py",
        "//tools:pytest_main.py",
    ],
    main = "//tools:pytest_main.py",
    args = ["tools/tests/test_gz_start_launcher.py"],
    deps = [],
    expected_coverage = ["tools/gz_start_launcher.py"],
    visibility = ["//visibility:public"],
)

# ── Kubernetes manifest validation ───────────────────────────────────────────

sh_test(
    name = "kubeconform_test",
    srcs = ["kubeconform.sh"],
    data = [
        "//:k3s_manifests",
        "@kubeconform_linux//:bin",
    ],
    tags = ["lint"],
)
