[project]
name = "glaze-tools"
version = "0.1.0"
description = "Dev/deployment tools for Glaze (Modal crop service, etc.)"
requires-python = "~=3.12.0"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "numba>=0.65.1",
    "numpy>=2.4.4",
    "onnxruntime>=1.26.0",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "pillow-heif>=1.3.0",
    "pytest>=9.0.3",
    "rembg[cpu]>=2.0.75",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "urllib3>=2.7.0",
    "uvicorn>=0.46.0",
]
