load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_library", "js_run_binary")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//web:eslint/package_json.bzl", eslint_pkg = "bin")
load("@npm//web:typescript/package_json.bzl", typescript_pkg = "bin")
load("@npm//web:vite/package_json.bzl", vite_pkg = "bin")
load(":vitest.bzl", "vitest_test")

# Link all npm packages into this package's node_modules so that js_binary
# and js_run_binary targets can resolve imports at build time.
npm_link_all_packages(name = "node_modules")

exports_files(["eslint.config.js"])

# Public eslint binary used by the lint aspect in //:lint.bzl
eslint_pkg.eslint_binary(
    name = "eslint_bin",
    visibility = ["//visibility:public"],
)

# ── Step 1: OpenAPI JSON schema ───────────────────────────────────────────────
# Runs manage.py spectacular via the Python genrule tool.
# Output: openapi.json
#
# Cache behaviour: re-runs only when api/**, backend/**, or workflow_files
# change (transitively through //tools:generate_schema's deps).

genrule(
    name = "openapi_schema",
    outs = ["openapi.json"],
    cmd = "$(execpath //tools:generate_schema) $@",
    tools = ["//tools:generate_schema"],
    visibility = ["//visibility:public"],
)

# ── npm tool binaries ─────────────────────────────────────────────────────────
# Generated js_run_binary-compatible targets for each npm CLI tool.
# These macros create the js_binary + entry_point wiring via directory_path
# so the Node toolchain is resolved correctly and node is on PATH.

vite_pkg.vite(
    name = "vite_run",
    srcs = [":web_lib"],
    args = ["build"],
    chdir = package_name(),
    out_dirs = ["dist"],
)

typescript_pkg.tsc(
    name = "tsc_run",
    srcs = [
        ":tsconfig.node.json",
        ":web_lib",
    ],
    args = [
        "--noEmit",
        "--project",
        "$(location :tsconfig.node.json)",
    ],
    stdout = "tsc_check.log",
    tags = ["lint"],
)

eslint_pkg.eslint(
    name = "eslint_run",
    srcs = [
        "eslint.config.js",
        ":web_lib",
    ],
    args = [
        ".",
        "--max-warnings=0",
    ],
    chdir = package_name(),
    stdout = "eslint_check.log",
    tags = ["lint"],
)

# ── TypeScript generated types ────────────────────────────────────────────────
# Runs generate-types.mjs with openapi.json as input.
# Declared here (not in //web) because Bazel forbids outs with up-level '..'
# references — outputs must live within the declaring package.
#
# Cache behaviour: re-runs only when openapi.json content changes.

js_binary(
    name = "generate_types_bin",
    data = [
        ":node_modules/openapi-typescript",
        ":node_modules/typescript",
    ],
    entry_point = "scripts/generate-types.mjs",
)

js_run_binary(
    name = "generated_types_gen",
    srcs = ["//web:openapi_schema"],
    outs = ["src/util/generated-types.ts"],
    args = [
        "$(execpath //web:openapi_schema)",
        "$(execpath src/util/generated-types.ts)",
    ],
    tool = "//web:generate_types_bin",
)

js_library(
    name = "generated_types",
    srcs = [":generated_types_gen"],
    visibility = ["//visibility:public"],
)

# ── Common utils library ──────────────────────────────────────────────────────

js_library(
    name = "util_lib",
    srcs = glob(
        [
            "src/util/**/*.ts",
        ],
        exclude = [
            "src/util/**/*.test.ts",
            "src/util/generated-types.ts",  # genrule output
        ],
    ),
    deps = [
        ":generated_types",
        "//:workflow_js",
    ],
)

# ── Web source library ────────────────────────────────────────────────────────

js_library(
    name = "web_lib",
    srcs = glob(
        [
            "src/**/*.ts",
            "src/**/*.tsx",
            "src/**/*.css",
            "src/**/*.svg",
            "*.json",
            "*.config.*",
            "*.ts",
            "public/**",
        ],
        exclude = [
            "src/util/**/*.ts",
            "src/**/*.test.ts",
            "src/**/*.test.tsx",
        ],
    ) + [
        "index.html",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":generated_types",
        ":node_modules",
        ":util_lib",
        "//:workflow_js",
    ],
)

# ── Component source libraries ────────────────────────────────────────────────
# Fine-grained js_library targets for test isolation: each test target depends
# only on the components it exercises, so changing one component does not
# invalidate unrelated test targets.
#
# Dependency relationships mirror the actual import graph so Bazel tracks
# changes correctly. web_lib (used for build) remains the authoritative
# all-sources target; these are testing-only slices of the same source tree.

# Config files needed by every test target (tsconfig, package.json, etc.)
js_library(
    name = "web_test_configs",
    srcs = [
        "package.json",
        "src/cloudinary-widget.d.ts",
        "src/test-setup.ts",
        "src/yaml.d.ts",
        "tsconfig.app.json",
        "tsconfig.json",
        "tsconfig.node.json",
        "tsconfig.test.json",
        "vitest.config.ts",
    ],
    visibility = ["//visibility:public"],
    deps = [":node_modules"],
)

# Leaf components: no local component deps.
js_library(
    name = "primitive_src",
    srcs = [
        "src/components/ErrorBoundary.tsx",
        "src/components/StateChip.tsx",
        "src/components/TagChip.tsx",
        "src/components/globalFieldPickerUtils.ts",
        "src/components/tagPalette.ts",
        "src/components/thumbnailConstants.ts",
        "src/util/useAsync.ts",
    ],
    deps = [
        ":generated_types",
        ":node_modules",
        ":util_lib",
    ],
)

js_library(
    name = "cloudinary_image_src",
    srcs = ["src/components/CloudinaryImage.tsx"],
    deps = [
        ":generated_types",
        ":node_modules",
    ],
)

js_library(
    name = "image_lightbox_src",
    srcs = ["src/components/ImageLightbox.tsx"],
    deps = [
        ":cloudinary_image_src",
        ":node_modules",
    ],
)

js_library(
    name = "autosave_src",
    srcs = [
        "src/components/AutosaveStatus.tsx",
        "src/components/useAutosave.ts",
    ],
    deps = [
        ":node_modules",
    ],
)

# Tag components: TagAutocomplete and TagChipList depend on TagChip; CreateTagDialog depends on tagPalette.
js_library(
    name = "tag_src",
    srcs = [
        "src/components/CreateTagDialog.tsx",
        "src/components/TagAutocomplete.tsx",
        "src/components/TagChipList.tsx",
    ],
    deps = [
        ":generated_types",
        ":node_modules",
        ":primitive_src",
        ":util_lib",
    ],
)

# Picker components: GlobalFieldPicker depends on globalFieldPickerUtils; GlobalEntryPicker depends on CloudinaryImage.
js_library(
    name = "global_picker_src",
    srcs = [
        "src/components/GlobalEntryPicker.tsx",
        "src/components/GlobalFieldPicker.tsx",
    ],
    deps = [
        ":autosave_src",
        ":cloudinary_image_src",
        ":generated_types",
        ":node_modules",
        ":primitive_src",
        ":util_lib",
    ],
)

js_library(
    name = "glaze_gallery_src",
    srcs = ["src/components/GlazeCombinationGallery.tsx"],
    deps = [
        ":cloudinary_image_src",
        ":generated_types",
        ":image_lightbox_src",
        ":node_modules",
        ":primitive_src",
        ":util_lib",
    ],
)

js_library(
    name = "new_piece_dialog_src",
    srcs = ["src/components/NewPieceDialog.tsx"],
    deps = [
        ":generated_types",
        ":global_picker_src",
        ":node_modules",
        ":primitive_src",
        ":util_lib",
    ],
)

js_library(
    name = "piece_list_src",
    srcs = ["src/components/PieceList.tsx"],
    deps = [
        ":cloudinary_image_src",
        ":generated_types",
        ":node_modules",
        ":primitive_src",
        ":tag_src",
        ":util_lib",
    ],
)

js_library(
    name = "piece_list_page_src",
    srcs = ["src/pages/PieceListPage.tsx"],
    deps = [
        ":new_piece_dialog_src",
        ":piece_list_src",
    ],
)

js_library(
    name = "workflow_state_src",
    srcs = [
        "src/components/WorkflowState.tsx",
    ],
    deps = [
        ":autosave_src",
        ":cloudinary_image_src",
        ":generated_types",
        ":global_picker_src",
        ":image_lightbox_src",
        ":node_modules",
        ":util_lib",
    ],
)

js_library(
    name = "piece_detail_src",
    srcs = ["src/components/PieceDetail.tsx"],
    deps = [
        ":cloudinary_image_src",
        ":generated_types",
        ":image_lightbox_src",
        ":node_modules",
        ":primitive_src",
        ":tag_src",
        ":util_lib",
        ":workflow_state_src",
    ],
)

js_library(
    name = "piece_detail_page_src",
    srcs = ["src/pages/PieceDetailPage.tsx"],
    deps = [
        ":piece_detail_src",
    ],
)

# ocrDetection.ts is the pure-logic module shared by GlazeImportToolPage and its unit tests.
js_library(
    name = "ocr_detection_src",
    srcs = ["src/pages/ocrDetection.ts"],
    deps = [":node_modules"],
)

# GlazeImportToolPage depends on the extracted ocrDetection module.
js_library(
    name = "glaze_import_src",
    srcs = ["src/pages/GlazeImportToolPage.tsx"],
    deps = [
        ":generated_types",
        ":node_modules",
        ":ocr_detection_src",
        ":util_lib",
    ],
)

# ── Granular web test targets ─────────────────────────────────────────────────
# Each target runs a focused subset of tests and depends only on the components
# it exercises.  A change to an isolated component re-runs only the relevant
# target(s) rather than the full suite.

vitest_test(
    name = "web_primitive_test",
    srcs = [
        "src/components/__tests__/ErrorBoundary.test.tsx",
        "src/components/__tests__/StateChip.test.tsx",
    ],
    tags = ["ibazel_notify_changes"],
    deps = [
        ":primitive_src",
    ],
)

vitest_test(
    name = "web_cloudinary_image_test",
    srcs = [
        "src/components/__tests__/CloudinaryImage.test.tsx",
    ],
    tags = ["ibazel_notify_changes"],
    deps = [
        ":cloudinary_image_src",
    ],
)

vitest_test(
    name = "web_image_lightbox_test",
    srcs = [
        "src/components/__tests__/ImageLightbox.test.tsx",
    ],
    tags = ["ibazel_notify_changes"],
    deps = [
        ":image_lightbox_src",
    ],
)

vitest_test(
    name = "web_tag_test",
    srcs = [
        "src/components/__tests__/TagComponents.test.tsx",
    ],
    tags = ["ibazel_notify_changes"],
    deps = [
        ":tag_src",
    ],
)

vitest_test(
    name = "web_picker_test",
    srcs = [
        "src/components/__tests__/GlobalEntryPicker.test.tsx",
        "src/components/__tests__/GlobalFieldPicker.test.tsx",
    ],
    tags = ["ibazel_notify_changes"],
    deps = [
        ":global_picker_src",
    ],
)

vitest_test(
    name = "web_glaze_gallery_test",
    srcs = [
        "src/components/__tests__/GlazeCombinationGallery.test.tsx",
    ],
    tags = ["ibazel_notify_changes"],
    deps = [
        ":glaze_gallery_src",
    ],
)

vitest_test(
    name = "web_new_piece_dialog_test",
    srcs = [
        "src/components/__tests__/NewPieceDialog.test.tsx",
    ],
    tags = ["ibazel_notify_changes"],
    deps = [
        ":new_piece_dialog_src",
    ],
)

vitest_test(
    name = "web_piece_list_test",
    srcs = [
        "src/components/__tests__/PieceList.test.tsx",
    ],
    tags = ["ibazel_notify_changes"],
    deps = [
        ":piece_list_src",
    ],
)

vitest_test(
    name = "web_workflow_state_test",
    srcs = [
        "src/components/__tests__/WorkflowState.test.tsx",
    ],
    tags = ["ibazel_notify_changes"],
    deps = [
        ":workflow_state_src",
    ],
)

vitest_test(
    name = "web_piece_detail_test",
    srcs = [
        "src/components/__tests__/PieceDetail.test.tsx",
    ],
    tags = ["ibazel_notify_changes"],
    deps = [
        ":piece_detail_src",
    ],
)

vitest_test(
    name = "web_piece_detail_page_test",
    srcs = [
        "src/pages/__tests__/PieceDetailPage.test.tsx",
    ],
    tags = ["ibazel_notify_changes"],
    deps = [
        ":piece_detail_page_src",
    ],
)

vitest_test(
    name = "web_piece_list_page_test",
    srcs = [
        "src/pages/__tests__/PieceListPage.test.tsx",
    ],
    tags = ["ibazel_notify_changes"],
    deps = [
        ":piece_list_page_src",
    ],
)

vitest_test(
    name = "web_glaze_import_test",
    srcs = [
        "src/pages/__tests__/GlazeImportToolPage.test.tsx",
    ],
    tags = ["ibazel_notify_changes"],
    deps = [
        ":glaze_import_src",
    ],
)

vitest_test(
    name = "web_ocr_detection_test",
    srcs = [
        "src/pages/__tests__/ocrDetection.test.ts",
    ],
    tags = ["ibazel_notify_changes"],
    deps = [
        "public/test-images/test-tile-blank-label.png",
        "public/test-images/test-tile-label.png",
        "public/test-images/test-tile-no-label.png",
        ":ocr_detection_src",
    ],
)

vitest_test(
    name = "workflow_test",
    srcs = [
        "src/util/workflow.test.ts",
    ],
    tags = ["ibazel_notify_changes"],
    deps = [
        ":util_lib",
    ],
)

# ── Web test suite ────────────────────────────────────────────────────────────
# Aggregate target: `bazel test //web:web_test` runs all web tests.
# Individual targets above run only when their inputs change.

test_suite(
    name = "web_test",
    tests = [
        ":web_cloudinary_image_test",
        ":web_glaze_gallery_test",
        ":web_glaze_import_test",
        ":web_image_lightbox_test",
        ":web_new_piece_dialog_test",
        ":web_ocr_detection_test",
        ":web_picker_test",
        ":web_piece_detail_page_test",
        ":web_piece_detail_test",
        ":web_piece_list_page_test",
        ":web_piece_list_test",
        ":web_primitive_test",
        ":web_tag_test",
        ":web_workflow_state_test",
        ":workflow_test",
    ],
)

# ── Web build ─────────────────────────────────────────────────────────────────
# Alias for the vite build target produced by the vite_bin macro above.

alias(
    name = "web_build",
    actual = ":vite_run",
    visibility = ["//visibility:public"],
)

# ── TypeScript type-check ─────────────────────────────────────────────────────

alias(
    name = "tsc_check",
    actual = ":tsc_run",
    tags = ["lint"],
)

# ── ESLint ────────────────────────────────────────────────────────────────────

alias(
    name = "eslint_check",
    actual = ":eslint_run",
    tags = ["lint"],
)
